GNOME Bugzilla – Bug 719884
Fix documentation typos in GTask and GCancellable examples
Last modified: 2013-12-05 22:56:30 UTC
-- Also, I wonder if g_object_unref(task) is needed right after g_task_run_in_thread{,_sync}().
Created attachment 263563 [details] [review] Fix documentation typos in GTask and GCancellable examples
Attachment 263563 [details] pushed as 7e9e7a6 - Fix documentation typos in GTask and GCancellable examples