Fix documentation typos in GTask and GCancellable examples

https://bugzilla.gnome.org/show_bug.cgi?id=719884